[package]
name = "dynapai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dynapai"
crate-type = ["cdylib"]

[dependencies]
dyn-clone = "1.0.9"
numpy = "0.17.2"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
